@@ -1,5 +1,4 @@
 --no-transfer-progress
 --batch-mode
---enable-preview
 -Dmaven.compiler.enablePreview=true
 -Dmaven.compiler.release=25
